--- a/src/text.css
+++ b/src/text.css
@@ -1,7 +1,9 @@
+svg.SVGText text {
+  font-family: "DejaVu Sans Condensed"
+}
+
 svg.SVGText text.label {
-  color: "#fff";
-  stroke: 'black';
-  fill: white
+  fill: white;
 }
 
 svg.SVGText text.content {
